WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116538
JSC ARM Traditional asserting on SunSpider after
r148893
https://bugs.webkit.org/show_bug.cgi?id=116538
Summary
JSC ARM Traditional asserting on SunSpider after r148893
Gabor Rapcsanyi
Reported
2013-05-21 08:16:37 PDT
JSC ARM Traditional asserting on SunSpider after
r148893
ASSERTION FAILED: (cond == Overflow) || (cond == Signed) || (cond == Zero) || (cond == NonZero) /home/rgabor/WebKit/Source/JavaScriptCore/assembler/MacroAssemblerARM.h(718) : JSC::AbstractMacroAssembler<JSC::ARMAssembler>::Jump JSC::MacroAssemblerARM::branchAdd32(JSC::MacroAssemblerARM::ResultCondition, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::TrustedImm32, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::AbsoluteAddress)
Attachments
the patch
(2.97 KB, patch)
2013-05-21 08:42 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2013-05-21 08:28:35 PDT
Looks like a simple case of needing to add "|| (cond ==PositiveOrZero)" to the branchAdd32 asserts. Patch coming soon.
Mark Lam
Comment 2
2013-05-21 08:42:09 PDT
Created
attachment 202433
[details]
the patch
Geoffrey Garen
Comment 3
2013-05-21 09:23:05 PDT
Comment on
attachment 202433
[details]
the patch r=me
WebKit Commit Bot
Comment 4
2013-05-21 09:43:36 PDT
Comment on
attachment 202433
[details]
the patch Clearing flags on attachment: 202433 Committed
r150449
: <
http://trac.webkit.org/changeset/150449
>
WebKit Commit Bot
Comment 5
2013-05-21 09:43:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug