Added missing assert condition for PositiveOrZero in ARM branch32(). https://bugs.webkit.org/show_bug.cgi?id=116538.

Reviewed by Geoffrey Garen.

* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::branchAdd32):


Canonical link: https://commits.webkit.org/134854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150449 268f45cc-cd09-0410-ab3c-d52691b4dbfc